<resources>
    <string name="app_name">FarmersMarketredo</string>
    <string name="produceTitle">Welcome to the Farm</string>
    <string name="produceSubtitle">Add any produce you like</string>
    <string name="produceButton">Add Produce</string>
    <string name="Fruit">Fruit</string>
    <string name="Vegetable">Vegetable</string>
    <string name="Jam">Jam</string>
    <string name="Bread">Bread</string>
    <string name="Eggs">Eggs</string>
    <string name="amount">Cost</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="listTitle">Produces List</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Cost</string>
    <string name="action_addproduce">AddProduce</string>
    <string name="action_list">List</string>

    <string name="action_share_us">Share Our app with your Friends</string>
    <string name="action_share">Our app is not available on the app store as of yet\n\ but we would love your help!!
    Share this app with your friends and family\n\ by sending them to our GitHub repo at\n\ https://github.com/AmberDaly/redo </string>
    <string name="shareButton">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Farmers Market</string>
    <string name="nav_header_subtitle">amber@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, Welcome to the Farmers Market App, \n\n This app was made to share fresh produce for everyone to be able to fine easily!\n\n Feel free to add you own produce to the app.</string>

    <string name="produceNotFound">No produce Yet...</string>
    <string name="produceError">Error : Couldn\'t Add Produce...</string>
    <string name="produceDetails">Produce Details</string>

    <string name="amt">Amount :</string>
    <string name="payment">Type :</string>
    <string name="message">About :</string>



    <string name="messageLoading">Please Wait while the produce is Loading...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="action_maps">Maps</string>

    <string name="action_farmers">Share</string>
</resources>