<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/addProduceFragment"
        android:name="com.wit.farmersmarketredo.ui.addProduce.AddProduceFragment"
        android:label="@string/action_addproduce"
        tools:layout="@layout/fragment_add_produce" >
        <action
            android:id="@+id/action_addProduceFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.wit.farmersmarketredo.ui.list.ListFragment"
        android:label="@string/action_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addProduceFragment"
            app:destination="@id/addProduceFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_listFragment_to_produceDetailFragment"
            app:destination="@id/produceDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.wit.farmersmarketredo.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/produceDetailFragment"
        android:name="com.wit.farmersmarketredo.ui.detail.ProduceDetailFragment"
        android:label="Edit Produce"
        tools:layout="@layout/produce_detail_fragment" >
        <action
            android:id="@+id/action_produceDetailFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="produceid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.wit.farmersmarketredo.ui.map.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_produceDetailFragment"
            app:destination="@id/produceDetailFragment" />
    </fragment>
</navigation>